<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Screen -->
    <string name="app_name">Terra Mobile</string>
    <string name="str_lbl_login">Login</string>
    <string name="lbl_test">Gerar Tarefas</string>
    <string name="lbl_make_backup">Fazer Backup do Banco de Dados</string>
    <string name="message_make_backup">Deseja fazer o backup do banco de dados?</string>
    <string name="lbl_logoff">Logoff</string>
    <string name="user_name_hint">Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="action_settings">Opções</string>
    <string name="btn_begin">Iniciar</string>
    <string name="btn_exit">Sair</string>
    <string name="lbl_exit">Sair</string>
    <string name="title_activity_main">Terra Mobile</string>

    <!-- GeoMap Screen -->
    <string name="lbl_new_form">Abrir formulárío</string>
    <string name="lbl_get_task">Opções</string>

    <!-- Form Screen -->
    <string name="tv_insertData">Inserir dados</string>
    <string name="btn_get_photo">Obter Foto</string>
    <string name="tv_lat">Latitude: </string>
    <string name="tv_long">Longitude: </string>
    <string name="tv_address">Endereço: </string>
    <string name="tv_log">Logradouro</string>
    <string name="other_informations">Outras Informações</string>
    <string name="tv_plus_infra">+ Infraestrutura</string>
    <string name="tv_minus_infra">- Infraestrutura</string>
    <string name="tv_observations">Observações:</string>
    <string name="tv_plus_observations">+ Observações</string>
    <string name="tv_minus_observations">- Observações</string>
    <string name="tv_neighborhood">Bairro: </string>
    <string name="tv_postal_code">CEP: </string>
    <string name="tv_number">Número: </string>
    <string name="tv_city">Cidade: </string>
    <string name="tv_state">UF: </string>
    <string name="tv_other_info">Outras Informações</string>
    <string name="tv_info1">Info 1: </string>
    <string name="tv_info2">Info 2: </string>
    <string name="tv_number_confirmation">Confirmação do número</string>
    <string name="tv_variance">Desconformidade</string>
    <string name="tv_numbers_founded">Números Adicionais</string>
    <string name="tv_other_batch_numbering">Demais numerações do lote</string>
    <string name="tv_primary_use">Uso principal</string>
    <string name="tv_secondary_use">Uso secundário</string>
    <string name="tv_pavimentation">Pavimentação</string>
    <string name="tv_asphalt_guides">Guias</string>
    <string name="tv_public_illumination">Iluminação pública</string>
    <string name="tv_eletric_energy">Energia elétrica</string>
    <string name="tv_pluvial_galery">Galeria pluvial</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_ok">OK</string>
    <string name="btn_clear">Limpar</string>
    <string name="btn_clear_address">Limpar Endereço</string>
    <string name="caution">Atenção</string>
    <string name="infra_message">Você mudou de trecho mas ainda não preencheu as informações de infraestrutura. \n\nO formulário anterior foi carregado para que você preencha estas informações.</string>
    <string name="exit_form">Fechar formulário?</string>

    <!-- Task Screen -->
    <string name="btn_sync_tasks">Enviar e Receber tarefas</string>
    <string name="btn_view_downloads">Mostrar Downloads</string>
    <string name="info_send_tasks">Enviando informaçãoes ao servidor</string>
    <string name="btn_clear_tasks">Apagar trechos</string>
    <string name="userName">Nome</string>
    <string name="generate_registers_message">Criar Registros de testes?</string>
    <string name="logoff_message">Fazer Logoff?</string>

    <!-- Domains Arrays items -->
    <string name="presentation">Apresentação</string>
    <string name="homolog">Homologação</string>
    <string name="production">Produção</string>
    <string name="debug">Debug</string>
    <string name="ok">OK</string>
    <string name="non_existent">Inexistente</string>
    <string name="not_confer">Não Confere</string>
    <string name="not_detected">Não Detectada</string>
    <string name="nonconforming">Desconforme</string>
    <string name="free">Vago</string>
    <string name="dismembered">Desmembrado</string>
    <string name="unified">Unificado</string>
    <string name="none">Nenhum</string>
    <string name="residential">Residencial</string>
    <string name="commercial">Comercial</string>
    <string name="services">Serviços</string>
    <string name="industrial">Industrial</string>
    <string name="religious">Religioso</string>
    <string name="under_construction">Em construção</string>
    <string name="undefined">Indefinido</string>
    <string name="asphalt">Asfalto</string>
    <string name="parallelepiped">Paralelepípedo</string>
    <string name="interlocked_tile">Lajota intertravada</string>
    <string name="without_paviment">Sem pavimentação</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="partial">Parcial</string>

    <!-- Colors -->
    <color name="background_cor1">#FFFFFF</color>
    <color name="background_cor2">#000000</color>
    <color name="background_cor3">#555555</color>
    <color name="background_cor4">#FF4500</color>
    <color name="background_cor5">#AAAAAA</color>
    <color name="background_cor6">#CCCCCC</color>
    <color name="background_cor7">#104E8B</color>
    <color name="background_cor8">#C11B17</color>

    <string name="btn_sync_tiles">Baixar Mapa Offline (Tiles)</string>
    <string name="txt_general_informations">Informações Gerais</string>
    <string name="txt_count_incompleted_tasks">Tarefas Incompletas:</string>
    <string name="txt_count_not_sync">Tarefas completas:</string>
    <string name="title_activity_list_tasks">ListTasks</string>
    <string name="hello_world">Hello world!</string>

</resources>